# pssu.ug

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  site.json  tailwind.config.js
core/: settings.py  urls.py
diversity_applications/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
diversity_applications/migrations/: 0001_initial.py  0002_remove_application_anything_else_and_more.py  0003_alter_application_id.py
events/: urls.py  views.py
home/: views.py
static/css/: main.css
templates/: apply.html  apply_success.html  base.html  home.html
templates/diversity_applications/: apply.html  apply_success.html  form_field.html
templates/events/: django_girls.html  index.html  persons_of_concern.html  pyladies.html
website/: views.py
